--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,30 @@
-@import-normalize; /* bring in normalize.css styles */
+@import-normalize;
+
+:root {
+  /* App */
+  --bg-gradient: #8dd3d8;
+  --bg-gradient-green: #639b68;
+  --container-bg: #f5f5f5;
+  --shadow-container: 10px 6px 12px rgb(139, 153, 213);
+  --shadow-main-title: 0 5px 4px rgba(0, 0, 0, 0.2);
+  --shadow-card: 4px 2px 4px rgba(0, 0, 0, 0.2);
+  --shadow-title: 2px 2px 4px rgba(0, 0, 0, 0.3);
+  /* contact-form */
+  --white: #ffffff;
+  --btn-bg: #007bff;
+  --btn-bg-hover: #0056b3;
+  --shadow-btn-box: 0 2px 4px rgba(0, 0, 0, 0.4);
+  --shadow-btn-txt: 0 2px 4px rgba(0, 0, 0, 0.1);
+  /* contact-list */
+  --contact-list-bg: #72ccd8;
+  --red: #dc3545;
+  --red-accent: #b3003c;
+  /* input */
+  --input-bg: rgba(141, 201, 201, 0.195);
+  --input-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.4);
+  --label-shadow: 1px 2px 4px rgba(73, 125, 115, 0.5);
+  --accent-border: 1px solid #ddd;
+}
 
 body {
   margin: 0;
@@ -12,4 +38,35 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a {
+  color: currentColor;
+  text-decoration: none;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+button {
+  cursor: pointer;
 }
